@@ -10,6 +10,7 @@ Version 2.7.4 - 2012-02-
 - updated Japanese translation
 - updated Russian translation (Alexander Melnik)
 - updated Spanish translation
+- fixed backup issue (Thorsten)
 - fixed some bugs (Alexander Melnik, Thorsten, Aco Mitevski)
 
 Version 2.7.3 - 2012-01-16
